# misc_cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  Dockerfile.test  devcontainer.json  docker-compose.yml
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  algorithm.h  algorithm.hpp  allocated_arrays.h  allocated_arrays.hpp  allocated_storages.h  always_false.h  array_of_optional.h  comp_element.h  dense_index_map.h  enum.h  fopen_ptr.h  log2.h  minmax_heap.h  overloaded.h  pack_manipulation.h  pack_manipulation.hpp  semaphore.h  shared_ptr.h  size_aware_cache.h  tagged_ptr.h  test.h  vector_of_optional.h
test/: CMakeLists.txt  algorithm_test.cpp  algorithm_tests.cpp  allocated_arrays_tests.cpp  allocated_storages_test.cpp  array_of_optional_test.cpp  comp_element_test.cpp  dense_index_map_test.cpp  log2_test.cpp  minmax_heap_test.cpp  minmax_heap_tests.cpp  pack_manipulation_tests.cpp  semaphore_tests.cpp  size_aware_cache_test.cpp  tagged_ptr_test.cpp  test.cpp  test.h  vector_of_optional_test.cpp
